- 회원가입 로직 및 데이터 전달 완료 - 로그인 로직 및 데이터 전달 완료 - 회원가입 및 로그인 시 유효성 검사 완료 - 회원가입 및 로그인 API 연동 준비 완료

--- a/instagram_ios/instagram_ios/Source/Main/Register/InfoViewController.storyboard
+++ b/instagram_ios/instagram_ios/Source/Main/Register/InfoViewController.storyboard
@@ -579,6 +579,7 @@
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="filled" title="가입하기"/>
                                         <connections>
+                                            <action selector="confirmRegister:" destination="GHj-eE-4V1" eventType="touchUpInside" id="0EB-7o-smf"/>
                                             <action selector="onClickPassword" destination="SuE-2t-pxN" eventType="touchUpInside" id="6IT-xT-jb4"/>
                                         </connections>
                                     </button>
@@ -612,6 +613,7 @@
                     </view>
                     <connections>
                         <outlet property="confirmButton" destination="E7a-Lt-Hlp" id="Fxf-eL-nzQ"/>
+                        <outlet property="userNameLbl" destination="4bw-li-aFK" id="MoO-hf-E8c"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9MJ-32-nEK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
