--- a/instagram_ios/instagram_ios/Source/Main/Register/InfoViewController.storyboard
+++ b/instagram_ios/instagram_ios/Source/Main/Register/InfoViewController.storyboard
@@ -33,13 +33,13 @@
                                 </connections>
                             </segmentedControl>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZI2-da-PUB">
-                                <rect key="frame" x="20" y="200" width="374" height="287"/>
+                                <rect key="frame" x="20" y="200.00000000000003" width="374" height="286.66666666666674"/>
                                 <connections>
                                     <segue destination="XYB-um-WzL" kind="embed" id="Boe-wE-MYZ"/>
                                 </connections>
                             </containerView>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9B0-GH-2T0">
-                                <rect key="frame" x="20" y="200" width="374" height="287"/>
+                                <rect key="frame" x="20" y="200.00000000000003" width="374" height="286.66666666666674"/>
                                 <connections>
                                     <segue destination="M4s-Mn-nss" kind="embed" id="NRd-PI-q5S"/>
                                 </connections>
@@ -79,7 +79,7 @@
             <objects>
                 <viewController id="XYB-um-WzL" customClass="PhoneViewController" customModule="instagram_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="xbq-Bg-kgh">
-                        <rect key="frame" x="0.0" y="0.0" width="374" height="287"/>
+                        <rect key="frame" x="0.0" y="0.0" width="374" height="286.66666666666669"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="전화번호 " textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bxn-zo-h23">
@@ -168,6 +168,7 @@
                                 </constraints>
                             </view>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="tjN-PP-aLA"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="bxn-zo-h23" firstAttribute="leading" secondItem="xbq-Bg-kgh" secondAttribute="leading" id="2ku-WW-F2t"/>
@@ -200,7 +201,7 @@
             <objects>
                 <viewController id="M4s-Mn-nss" customClass="EmailViewController" customModule="instagram_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Uyc-6V-RHR">
-                        <rect key="frame" x="0.0" y="0.0" width="374" height="287"/>
+                        <rect key="frame" x="0.0" y="0.0" width="374" height="286.66666666666669"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" id="3pt-95-Or0">
@@ -300,6 +301,7 @@
                                 </constraints>
                             </view>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="rLc-tO-Pra"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <connections>
@@ -385,23 +387,23 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" id="2GF-2x-Z36">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <rect key="frame" x="-2" y="-2" width="415" height="896"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="비밀번호 만들기" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5zw-7m-yun">
-                                        <rect key="frame" x="0.0" y="88" width="414" height="33.666666666666657"/>
+                                        <rect key="frame" x="0.0" y="88" width="415" height="33.666666666666657"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="보안을 위해 비밀번호는 6자 이상이어야 합니다." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hkp-7E-RgC">
-                                        <rect key="frame" x="20" y="161.66666666666666" width="374" height="17"/>
+                                        <rect key="frame" x="20" y="161.66666666666666" width="375" height="17"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="비밀번호" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VjM-TY-5aa">
-                                        <rect key="frame" x="25" y="218.66666666666666" width="364" height="49.999999999999972"/>
+                                        <rect key="frame" x="25" y="218.66666666666666" width="365" height="49.999999999999972"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="SvG-ON-GmK"/>
                                         </constraints>
@@ -409,7 +411,7 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y0q-V9-rhI">
-                                        <rect key="frame" x="25" y="327" width="364" height="50"/>
+                                        <rect key="frame" x="25" y="327" width="365" height="50"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="filled" title="다음"/>
                                         <connections>
@@ -483,23 +485,23 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" id="KLg-Qi-lWP">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <rect key="frame" x="-2" y="-1" width="415" height="896"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="사용자 이름 선택" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HXb-ip-DcG">
-                                        <rect key="frame" x="0.0" y="88" width="414" height="33.666666666666657"/>
+                                        <rect key="frame" x="0.0" y="88" width="415" height="33.666666666666657"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="나중에 언제든지 변경할 수 있습니다." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wDC-3q-8o6">
-                                        <rect key="frame" x="20" y="161.66666666666666" width="374" height="17"/>
+                                        <rect key="frame" x="20" y="161.66666666666666" width="375" height="17"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="사용자 이름" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oEy-Pd-z9B">
-                                        <rect key="frame" x="25" y="218.66666666666666" width="364" height="49.999999999999972"/>
+                                        <rect key="frame" x="25" y="218.66666666666666" width="365" height="49.999999999999972"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="gfJ-FZ-YYf"/>
                                         </constraints>
@@ -507,7 +509,7 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Drf-19-eel">
-                                        <rect key="frame" x="25" y="298.66666666666669" width="364" height="50"/>
+                                        <rect key="frame" x="25" y="298.66666666666669" width="365" height="50"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="filled" title="다음"/>
                                         <connections>
@@ -556,23 +558,23 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" id="w4h-4I-qNr">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <rect key="frame" x="-2" y="-1" width="415" height="896"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4bw-li-aFK">
-                                        <rect key="frame" x="0.0" y="88" width="414" height="33.666666666666657"/>
+                                        <rect key="frame" x="0.0" y="88" width="415" height="33.666666666666657"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="친구들이 회원님을 찾을 수 있도록 이름을 추가하세요." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eT3-QO-PRu">
-                                        <rect key="frame" x="20" y="195.33333333333334" width="374" height="17"/>
+                                        <rect key="frame" x="20" y="195.33333333333334" width="375" height="17"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E7a-Lt-Hlp">
-                                        <rect key="frame" x="25" y="242.33333333333337" width="364" height="50"/>
+                                        <rect key="frame" x="25" y="242.33333333333337" width="365" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="uRt-OY-PCC"/>
                                         </constraints>
@@ -584,7 +586,7 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="님으로 가입하시겠어요?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ir-Jl-InW">
-                                        <rect key="frame" x="0.0" y="121.66666666666667" width="414" height="33.666666666666671"/>
+                                        <rect key="frame" x="0.0" y="121.66666666666667" width="415" height="33.666666666666671"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
